# victoriametrix

./: .gitignore  README.md
docker/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
docker/config/: tool.yml
docker/config/datasources/: tool-datasource.yml
docker/scripts/: test_load.py
docker/victoria-metrics-data/cache/: curr_hour_metric_ids  next_day_metric_ids_v2  prev_hour_metric_ids  rollupResult.key.prefix
